--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <h1>Freshmart Inc. Home Page</h1>
         <img src="grape1.png" width=1520 height=330></img><br/>
         <table class="center" cellpadding=30>
-            <tr><th><a href="https://www.niu.edu"><h2>CUSTOMER</h2></a></th><th>OR</th><th>
+            <tr><th><a href="./inventory.php"><h2>CUSTOMER</h2></a></th><th>OR</th><th>
                 <a href="https://github.com/xxplunderxx/466-Group-Project/tree/main"><h2>EMPLOYEE</h2></a></th></tr>
         </table>
         <p><br/><br/><br/><br/><br/><br/><br/>Alexandra Alcantar: Z1893793, Jacob Eul: Z1892587, Justin Derus: Z1854210 - CSCI 466 GROUP PROJECT</p>
