--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <img src="grape1.png" width=1520 height=330></img><br/>
         <table class="center" cellpadding=30>
             <tr><th><a href="./inventory.php"><h2>CUSTOMER</h2></a></th><th>OR</th><th>
-                <a href="./ShoppingCart"><h2>EMPLOYEE</h2></a></th></tr>
+                <a href="./ShoppingCart.php"><h2>EMPLOYEE</h2></a></th></tr>
         </table>
         <p><br/><br/><br/><br/><br/><br/><br/>Alexandra Alcantar: Z1893793, Jacob Eul: Z1892587, Justin Derus: Z1854210 - CSCI 466 GROUP PROJECT</p>
     </body>
